# zero-reconcile

./: .gitignore  README.md
00-zero-reconcile/: README.md  zr.py
01-file-reconcile/: README.md  expected.state.yml  index.js  jobs.js  package.json  pnpm-lock.yaml
02-db-reconcile/: pyproject.toml
03-graphql-reconcile/: README.md
03-graphql-reconcile/schemas/: exampleGQLType  exampleTC  index.js  package.json  schema  tc
03-graphql-reconcile/server/: jsons  package.json  pnpm-lock.yaml
03-graphql-reconcile/server/src/: index.js
04-git-reconcile/: README.md
extras/apps/hello-custom/: Makefile  README.md  index.js
extras/containers/hello-custom/: Dockerfile  package.json
reconcilers/: README.md
schemas/: pnpm-lock.yaml
server/: package.json  pnpm-lock.yaml
server/src/: index.js  schema.js
