[tool.poetry]
name = "db-sql-reconcile"
version = "0.1.0"
description = ""
authors = ["Tyler Pate <tpate@redhat.com>"]
readme = "README.md"
packages = [{include = "db_sql_reconcile"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
